--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     compile project(':ijkplayerlibrary')
     compile project(':superplayerlibrary')
     compile project(':wheelview')
+    compile 'com.facebook.fresco:fresco:1.0.0'
 }
