添加了部分365功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -165,8 +165,10 @@
         <activity android:name=".ui_second.Partner_Clothes" />
         <activity android:name=".ui_third.Item_DetailsActivity" />
         <activity android:name=".ui_four.Add_IndentActivity" />
+        <activity android:name=".ui_third.My_AddressActivity" />
+        <activity android:name=".ui_third.RecordActivity" />
         <activity android:name=".ui_third.Write_OrderActivity" />
-        <activity android:name=".ui_third.RecordActivity"></activity>
+        <activity android:name=".ui_third.Write_AddressActivity"></activity>
     </application>
 
 </manifest>
