--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
-                <data android:scheme="tencent100371282" />
+                <data android:scheme="tencent1105837176" />
 
                 <action android:name="android.intent.action.VIEW" />
 
@@ -168,7 +168,8 @@
         <activity android:name=".ui_third.ListAddress" />
         <activity android:name=".ui_third.My_365Activity" />
         <activity android:name=".ui_third.Buy_365Activity" />
-        <activity android:name=".fragment_second.SeeCarActivity"></activity>
+        <activity android:name=".fragment_second.SeeCarActivity" />
+        <activity android:name=".ui_third.ShareActivity"></activity>
     </application>
 
 </manifest>
