--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <application xmlns:tools="http://schemas.android.com/tools"
-        android:name=".application.MyApplication"
+        android:name=".application.APP"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
@@ -128,6 +128,7 @@
         <activity android:name=".ui.activity.WDYCPicActivity" />
         <activity android:name=".ui.activity.VideoPayActivity" />
         <activity android:name=".ui.activity.MineStyleActivity" />
+        <activity android:name=".ui.activity.ZhenDuanActivity"></activity>
 
         <receiver android:name=".wxapi.AppRegister">
             <intent-filter>
@@ -153,14 +154,10 @@
         <activity android:name=".ui.activity.SLWJianJieActivity" />
         <activity android:name=".ui.activity.GoDoorInfoActivity" />
         <activity android:name=".ui.activity.login.LoginHMService" />
-        <activity android:name=".ui.activity.register.RegisterSelectActivity" />
-        <activity android:name=".ui.activity.register.RegisterPhoneActivity" />
         <activity android:name=".ui.activity.register.RegisterGetPhoneCodeActivity" />
         <activity android:name=".ui.activity.register.RegisterUpPhotoActivity" />
         <activity android:name=".ui.activity.register.RegisterOverActivity" />
         <activity android:name=".ui.activity.register.RegisterOverCompleteInfoActivity" />
-        <activity android:name=".ui.activity.login.LoginSelectActivity" />
-        <activity android:name=".ui.activity.login.LoginByPhoneActivity" />
         <activity android:name=".ui.activity.LiJiYuYueStudioSelectCityActivity" />
         <activity android:name=".ui.activity.video.HomeVideoYouhuiquanActivity" />
         <activity
