--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,9 @@ android {
         applicationId "com.example.huichuanyi"
         minSdkVersion 18
         targetSdkVersion 22
-        versionCode 20
-        versionName "2.1.0"
+        versionCode 22
+        versionName "2.1.3"
+        multiDexEnabled true
         ndk {
             //选择要添加的对应cpu类型的.so库。
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
@@ -29,12 +30,21 @@ android {
     }
     sourceSets {
         main {
+            jni.srcDirs = []
             jniLibs.srcDirs = ['libs']
         }
-
         androidTest {
 
         }
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+    //添加如下配置就ok了
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
     }
 }
 repositories {
@@ -47,7 +57,6 @@ dependencies {
     compile project(':rollviewpager')
     compile name: 'SMSSDK-2.1.2', ext: 'aar'
     compile name: 'SMSSDKGUI-2.1.2', ext: 'aar'
-    compile project(':wheelview')
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'cn.jiguang:jpush:2.1.8'
@@ -58,11 +67,15 @@ dependencies {
     compile 'com.foamtrace:photopicker:1.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.facebook.fresco:fresco:0.12.0'
-    compile 'com.facebook.fresco:animated-gif:0.12.0'
     compile 'com.jakewharton:butterknife:8.0.1'
     compile 'com.github.promeg:tinypinyin:1.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:multidex:1.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile(name: 'HMS-SDK-2.4.0.300', ext: 'aar')
+    compile project(':IMKit')
+    compile project(':IMLib')
 }
+repositories { flatDir { dirs 'aars' } }
