--- a/rollviewpager/build.gradle
+++ b/rollviewpager/build.gradle
@@ -30,7 +30,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
 }
 
 apply from:'upload_jcenter.gradle'
