--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -163,6 +163,7 @@
         <activity android:name=".ui.activity.VideoPayActivity" />
         <activity android:name=".ui.activity.MineStyleActivity" />
         <activity android:name=".ui.activity.ZhenDuanActivity" />
+        <activity android:name=".ui.newpage.ShopCarOrderDetailsActivity"></activity>
 
         <receiver android:name=".wxapi.AppRegister">
             <intent-filter>
