--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,7 +81,7 @@
         <activity android:name=".ui.activity.HomeDaPeiRiJiActivity" />
         <activity android:name=".ui.activity.MC_HomeActivity" />
         <activity android:name=".ui.newpage.HmShopMallActivity"></activity>
-        <activity android:name=".ui.newpage.ShopItemDetailsActivity"></activity>
+        <activity android:name=".ui.newpage.ShopItemDetailsActivity" android:launchMode="singleTop"></activity>
         <activity android:name=".newui.activity.OrderFormAllActivity"></activity>
         <activity
             android:name="com.mob.tools.MobUIShell"
@@ -396,7 +396,7 @@
         <activity
             android:name=".ui.activity.lanyang.LyMainActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
-        <activity android:name=".ui.activity.lanyang.LyShopDetailsActivity" />
+        <activity android:name=".ui.activity.lanyang.LyShopDetailsActivity" android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.lanyang.LyBuyActivity" />
         <activity android:name=".ui.activity.lanyang.LyShopCarActivity" />
         <activity android:name=".ui.activity.lanyang.LyCommendPeopleActivity" />
